# weibian

./: .gitignore  Cargo.toml  README.md  denote-weibian.el  weibian.toml
.github/workflows/: pages.yaml
.wb/templates/: note.html
public/css/: weibian.css
src/: args.rs  bundle.rs  compile.rs  compiler.rs  config.rs  main.rs  terminal.rs  watch.rs
src/compiler/: host.rs  library.rs  mod.rs
typ/: @@0007--how-to-set-up-weibian.typ  @@0008--writing-in-weibian.typ  @@0009--use-emacs-denote-package-to-write-in-weibian.typ  index.typ
typ/_template/: lib.typ  template-paged.typ  template.typ
typ/public/css/: weibian.css
