[package]
name = "weibian"
version = "1.0.0-rc.5"
edition = "2024"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
codespan-reporting = "0.13.1"
color-print = "0.3.7"
ecow = "0.2.5"
globset = "0.4.16"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
termcolor = "1.4.1"
