[package]
name = "weibian"
version = "2.0.0-rc.3"
edition = "2024"

[[bin]]
name = "wb"
path = "src/main.rs"

[features]
default = ["library-compiler", "host-compiler"]
library-compiler = [
    "dep:comemo",
    "dep:chrono",
    "dep:open",
    "dep:pathdiff",
    "dep:rayon",
    "dep:serde_json",
    "dep:typst",
    "dep:typst-bundle",
    "dep:typst-html",
    "dep:typst-kit",
    "dep:typst-layout",
    "dep:typst-pdf",
    "dep:typst-render",
    "dep:typst-svg",
    "dep:typst-syntax",
    "dep:typst-utils",
]
host-compiler = []

[dependencies]
clap = { version = "4.5.40", features = ["derive", "env"] }
codespan-reporting = "0.13.1"
color-print = "0.3.7"
comemo = { version = "0.5.1", optional = true }
ecow = "0.2.5"
globset = "0.4.16"
figment = { version = "0.10.8", features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
termcolor = "1.4.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"], optional = true }
open = { version = "5.0.1", optional = true }
pathdiff = { version = "0.2", optional = true }
rayon = { version = "1.7.0", optional = true }
serde_json = { version = "1", optional = true }
typst = { version = "0.15.0", optional = true }
typst-bundle = { version = "0.15.0", optional = true }
typst-html = { version = "0.15.0", optional = true }
typst-kit = { version = "0.15.0", default-features = false, features = ["bundle", "embedded-fonts", "scan-fonts", "system-packages", "universe-packages", "datetime", "emit-diagnostics", "system-downloader", "timer", "watcher", "http-server"], optional = true }
typst-layout = { version = "0.15.0", optional = true }
typst-pdf = { version = "0.15.0", optional = true }
typst-render = { version = "0.15.0", optional = true }
typst-svg = { version = "0.15.0", optional = true }
typst-syntax = { version = "0.15.0", optional = true }
typst-utils = { version = "0.15.0", optional = true }
